WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243901
[JSC][32bit] ASSERTION FAILED: !initialBytes
https://bugs.webkit.org/show_bug.cgi?id=243901
Summary
[JSC][32bit] ASSERTION FAILED: !initialBytes
Mikhail R. Gadelha
Reported
2022-08-12 14:54:09 PDT
Fixes uint64_t being truncated to a size_t (uint32_t) when trying to create a memory object in wasm
Attachments
Add attachment
proposed patch, testcase, etc.
Mikhail R. Gadelha
Comment 1
2022-08-12 15:01:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3275
EWS
Comment 2
2022-08-12 19:45:06 PDT
Committed
253399@main
(3866ba779bf1): <
https://commits.webkit.org/253399@main
> Reviewed commits have been landed. Closing PR #3275 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-12 19:46:16 PDT
<
rdar://problem/98598580
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug