[JSC][32bit] ASSERTION FAILED: !initialBytes https://bugs.webkit.org/show_bug.cgi?id=243901

Reviewed by Yusuke Suzuki.

This patch fixes a value being truncated in 32bits platforms, resulting
in a invalid maximum size.

The method bytes() returns a uint64_t but in Memory::tryCreate, it is
stored in size_t, which is fine in 64bit platforms but gets truncated in
32 bits ones.

In this patch both initialBytes and maximumBytes are now uint64_t and
there is an extra check if the maximum size is greater than what's
allowed in the platform.

* Source/JavaScriptCore/wasm/WasmMemory.cpp:
(JSC::Wasm::Memory::tryCreate):

Canonical link: https://commits.webkit.org/253399@main